[package]
name = "tfchainmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfchain_client = { git = "https://github.com/dylanverstraete/tfchain_client" }
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_yaml = "0.8"

[dependencies.sp-core]
version = "3.0.0"

[patch.'https://github.com/paritytech/substrate']
metadata = { package = "frame-metadata", version = "13.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }
balances = { package = "pallet-balances", version = "3.0.0", default-features = false }
sc-rpc-api = "0.9.0"
sp-core = "3.0.0"
sp-runtime = "3.0.0"
system = { package = "frame-system", version = "3.0.0" }
support = { package = "frame-support", version = "3.0.0" }