[package]
name = "tfchainmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfchain-client = { git = "https://github.com/dylanverstraete/tfchain-client" }
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_yaml = "0.8"
sp-core = "6.0.0"
